crates/reinhardt-pages/tests/ui/client_form/fail/tuple_struct.rs
use reinhardt_pages::ClientForm;

#[derive(Clone, PartialEq, ClientForm)]
struct TupleRequest(String);

fn main() {}
