crates/reinhardt-pages/tests/ui/client_form/fail/tuple_struct.stderr
error: ClientForm requires a struct with named fields
 --> tests/ui/client_form/fail/tuple_struct.rs:4:8
  |
4 | struct TupleRequest(String);
  |        ^^^^^^^^^^^^
